Fixed bugs with buttons visibility on lower resolutions

--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,11 @@
 }
 
 body {
-  background-color: #DEE1EC;
   font-family: "Oswald", "Roboto", sans-serif;
   background: #4e54c8;  
   background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
   width: 100%;
-  height:100vh;
+  height:100%;
   overflow-x: hidden;
 }
 
@@ -28,7 +27,7 @@ body {
     width: 100%;
     height: 100%;
     overflow: hidden;
-    z-index: -1;
+
 }
 
 .circles li{
