--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -12,6 +12,6 @@
 @media (max-width: 550px) {
     .board{
         margin-top: 50px;
-        margin-bottom: 100px;
+        margin-bottom: 50px;
     }
   }
