--- a/src/components/Buttons.css
+++ b/src/components/Buttons.css
@@ -1,7 +1,6 @@
 .operation-btn {
     display: block;
     margin: 0 10px;
-    margin-top: 10%;
     background-color: rgba(255, 255, 0, 0.829);
     border: 2px solid #000000;
     border-radius: 30px;
